# vulture_engine_2

./: .gitignore  CMakeLists.txt  Setup.bat
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt  README.md
engine/src/: Vulture.cpp
engine/src/profiling/logging/: Logger.cpp  Logger.hpp
engine/src/scripting/: ScriptHandler.cpp  ScriptHandler.hpp
